Working on login and registeration api working fine on postman but not on frontend

--- a/backend/QuizMgmtWeb/appsettings.json
+++ b/backend/QuizMgmtWeb/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ProjectQMSWpf;Integrated Security=True;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
+  "Jwt": {
+    "SecretKey": "a8c5f7d4e5g8h3j7k2l4m1n6o9p3q2r7"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
