--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
+    "react-toastify": "^11.0.2",
     "redux-persist": "^6.0.0",
     "uuid": "^11.0.3"
   },
